📝 gamiumn quick start

--- a/docs/docs/gamium/engine/unity/project-configuration.mdx
+++ b/docs/docs/gamium/engine/unity/project-configuration.mdx
@@ -9,6 +9,9 @@ import unity_gamium_update_log from '@site/static/img/gamium/unity_gamium_update
 To use `Gamium`, you must add `Gamium Engine SDK` to your project.
 The `Gamium Engine SDK` performs the functions requested by the `Gamium Client` to help you proceed with automated testing.
 
+## Requirements
+- Unity 2020.3.0f1 or higher
+
 ## 1. Add Gamium Engine SDK
 
 In [Project manifest](https://docs.unity3d.com/Manual/upm-manifestPrj.html), add to `dependencies` as follows.
