♻️ gamium-engine-unity-samples => gamium-unity-samples

--- a/docs/docs/gamium/engine/unity/examples.mdx
+++ b/docs/docs/gamium/engine/unity/examples.mdx
@@ -10,7 +10,7 @@ In line with these various cases, we have prepared a project containing gamium i
 You can find it in the github repository below.
 
 
-- [gamium-engine-unity-samples](https://github.com/dogu-team/gamium-engine-unity-samples)
+- [gamium-unity-samples](https://github.com/dogu-team/gamium-unity-samples)
 
 
 It is difficult to respond to various cases, but gamium team is working hard to support all of them.
