--- a/docs/docs/gamium/engine/unity/project-configuration.mdx
+++ b/docs/docs/gamium/engine/unity/project-configuration.mdx
@@ -24,7 +24,7 @@ In [Project manifest](https://docs.unity3d.com/Manual/upm-manifestPrj.html), add
 The source code and example project for the Gamium Engine SDK can be found at the link below
 
 - [gamium](https://github.com/dogu-team/gamium)
-- [gamium-engine-unity-samples](https://github.com/dogu-team/gamium-engine-unity-samples)
+- [gamium-unity-samples](https://github.com/dogu-team/gamium-unity-samples)
 
 :::
 
