--- a/docs/docs/gamium/get-started/quick-start.mdx
+++ b/docs/docs/gamium/get-started/quick-start.mdx
@@ -8,11 +8,11 @@ import unity_dogurpgsample_editor from '@site/static/img/gamium/unity_dogurpgsam
 This page will be based on Unity and TypeScript.
 
 ### Prerequisites
-In the case of Unity, there are [sample projects]((https://github.com/dogu-team/gamium-engine-unity-samples)) prepared in advance. Please open [DoguRpgSample](https://github.com/dogu-team/gamium-engine-unity-samples/tree/main/DoguRpgSample) during these projects
+In the case of Unity, there are [sample projects]((https://github.com/dogu-team/gamium-unity-samples)) prepared in advance. Please open [DoguRpgSample](https://github.com/dogu-team/gamium-unity-samples/tree/main/DoguRpgSample) during these projects
 
 
 ### Play DoguRpgSample
-- Clone the gamium-engine-unity-samples git repository.
+- Clone the gamium-unity-samples git repository.
 - Please open the DoguRpgSample directory with Unity Editor.
 - Open Assets/Scenes/Login.unity
 - Please press the play button to confirm that the project is running normally.
