--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -11,32 +11,53 @@ import TOCInline from '@theme/TOCInline';
 
 ## Setting up your local environment
 
-## Step 1: Fork
+### Step 1: Fork
 
-## Step 2: Build
+Fork the project on GitHub and clone your fork locally.
 
-## Step 3: Branch
+```sh
+$ git clone https://github.com/dogu-team/gamium.git
+$ cd gamium
+$ git remote add upstream https://github.com/dogu-team/gamium.git
+$ git fetch upstream
+```
+
+### Step 2: Build
+
+Build steps and dependencies differ slightly depending on your game engine. See these detailed guides on building Gamium locally:
+
+#### Engine
+
+🚧 **work in progress** 🚧
+
+#### Client
+
+🚧 **work in progress** 🚧
+
+Once you've built the project locally, you're ready to start making changes!
+
+### Step 3: Branch
 
 ## Making Changes
 
-## Step 4: Code
+### Step 4: Code
 
-## Step 5: Commit
+### Step 5: Commit
 
 ## Commit message guidelines
 
-## Step 6: Rebase
+### Step 6: Rebase
 
-## Step 7: Test
+### Step 7: Test
 
-## Step 8: Push
+### Step 8: Push
 
-## Step 9: Opening the Pull Request
+### Step 9: Opening the Pull Request
 
-## Step 10: Discuss and Update
+### Step 10: Discuss and Update
 
 ## Approval and Request Changes Workflow
 
-## Step 11: Landing
+### Step 11: Landing
 
 ## Continuous Integration Testing
