--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -28,19 +28,34 @@ Build steps and dependencies differ slightly depending on your game engine. See 
 
 #### Engine
 
-🚧 **work in progress** 🚧
+🚧 **work in progress** 🚧  
+🚧 link to use local unity engine library source code 🚧
 
 #### Client
 
-🚧 **work in progress** 🚧
+🚧 **work in progress** 🚧  
+🚧 link to use local typescript client source code 🚧
 
 Once you've built the project locally, you're ready to start making changes!
 
 ### Step 3: Branch
 
+To keep your development environment organized, create local branches to hold your work. These should be branched directly off of the main branch.
+
+```sh
+git checkout -b my-branch -t upstream/main
+```
+
 ## Making Changes
 
 ### Step 4: Code
+
+Most pull requests opened against the dogu-team/gamium repository include changes to either the protocol in the protocol/ folder, the client in the client/ folder, the server in the server/ folder, the documentation in docs/ folder.
+
+🚧 **work in progress** 🚧  
+Please be sure to run `yarn run lint` from time to time on any code changes to ensure that they follow the project's code style.
+
+See coding style for more information about best practice when modifying code in different parts of the project.
 
 ### Step 5: Commit
 
