📝 quick start client

--- a/docs/docs/api/api-reference.mdx
+++ b/docs/docs/api/api-reference.mdx
@@ -3,3 +3,10 @@ sidebar_position: 0
 title: API Reference
 toc_max_heading_level: 4
 ---
+
+This page deals with documents from gamium SDKs.
+Check the pages below first.
+
+- Client
+  - TypeScript
+    - [Gamium Client](client/typescript/classes/gamium-client)
