--- a/docs/docs/gamium/client/write-testscript.mdx
+++ b/docs/docs/gamium/client/write-testscript.mdx
@@ -20,20 +20,16 @@ When the executable is ready, you can connect `Gamium Client` to a program that 
 <TabItem value="ts" label="TypeScript" default>
 
 ```ts
-import { GamiumClient } from '@dogu-tech/gamium-client/common';
-import { NodeGamiumService } from '@dogu-tech/gamium-client/node';
-const gamiumKit = await prepareGamium(); 
-  
-const gamiumService = new NodeGamiumService('127.0.0.1', port);
-const gamiumClient = new GamiumClient(gamiumService);
-await gamiumClient.connect();
-const gamium = gamiumKit.gamium;
+import { GamiumClient, NodeGamiumService } from 'gamium';
+
+const gamiumService = new NodeGamiumService('127.0.0.1', 50061);
+await gamiumService.connect();
+const gamium = new GamiumClient(gamiumService);
 const ui = gamium.ui();
 ```
 
 </TabItem>
 </Tabs>
-
 
 ## Click Buton
 
