add test command

--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -122,7 +122,7 @@ Bug fixes and features should always come with tests. A [**testing guide**](deve
 Before submitting your changes in a pull request, always run the full test suite. To run the tests:
 
 ```sh
-🚧 work in progress 🚧
+yarn run test
 ```
 
 Make sure the linter does not report any issues and that all tests pass. Please do not submit patches that fail either check.
