--- a/docs/docs/gamium/contributing/issues.mdx
+++ b/docs/docs/gamium/contributing/issues.mdx
@@ -19,7 +19,7 @@ For any issue, there are fundamentally three ways an individual can contribute:
 
 ## Asking for General Help
 
-[**The Gamium website**](https://XXX) has a list of resources for getting programming help, reporting security issues, contributing, and more. Please use the issue tracker for bugs only!
+[**The Gamium website**](https://gamium.dogutech.io) has a list of resources for getting programming help, reporting security issues, contributing, and more. Please use the issue tracker for bugs only!
 
 ## Submitting a Bug Report
 
