engine unity fix problem that not work as document

--- a/docs/docs/gamium/engine/unity/server-configuration.mdx
+++ b/docs/docs/gamium/engine/unity/server-configuration.mdx
@@ -16,7 +16,7 @@ The settings for the `Gamium Engine` can be configured by project.
 new ServerBuilder()
     .SetConfig(new ServerConfig
     {
-        port = 50061
+        port = 50061,
         inputMappings = new InputMapping[]
         {
             new InputMapping()
