🔧 dogu-docs update engine version, and testscript link

--- a/docs/docs/gamium/get-started/quick-start.mdx
+++ b/docs/docs/gamium/get-started/quick-start.mdx
@@ -37,7 +37,7 @@ The engine is now running without problems. Next, let's connect the client to th
 
 ### Connect to the engine
 
-- Open the `gamium-unity-samples/client` directory with Visual Studio Code.
+- Open the `gamium-unity-samples/client/typescript` directory with Visual Studio Code.
 - Open the terminal and execute the following command.
   - This command initializes the automation script project, connects to the running gamium engine, and runs the automation script.
 
@@ -52,5 +52,5 @@ If the test proceeds as shown in the screen below, you followed the guide well.
 
 ### Next thing to look around
 
-- Take a look at [gamium-unity-samples/client/test/dogurpgsample-test.ts](https://github.com/dogu-team/gamium-unity-samples/blob/main/client/test/dogurpgsample-test.ts). See how the script clicks the button. Also, look at how to buy items.
+- Take a look at [dogurpgsample-test.ts](https://github.com/dogu-team/gamium-unity-samples/blob/main/client/typescript/test/dogurpgsample-test.ts). See how the script clicks the button. Also, look at how to buy items.
 - You can learn what functions and how to control them with client scripts from [Client document](/gamium/client/write-testscript) and [API document](/api/api-reference).
