--- a/docs/docs/gamium/get-started/real-device.mdx
+++ b/docs/docs/gamium/get-started/real-device.mdx
@@ -7,7 +7,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Details from '@theme/MDXComponents/Details';
 
-Gamium connection is possible not only on the editor but also on the actual built app.
+Gamium connection is possible not only on the editor but also on the actual device.
 
 ### Build
 
