✨ add protocol/unity development guide

--- a/docs/docs/gamium/contributing/development-guides/client-development/typescript.mdx
+++ b/docs/docs/gamium/contributing/development-guides/client-development/typescript.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 title: TypeScript
 ---
 
 # Gamium Client for TypeScript
 
-🚧 **work in progress** 🚧
+🚧 **work in progress**
