--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -29,7 +29,7 @@ Build steps and dependencies differ slightly depending on your game engine. See 
 
 #### Engine
 
-- [**Gamium Engine for Unity**](development-guides/engine-development/unity)
+- [**Gamium Engine Unity SDK**](development-guides/engine-development/unity)
 
 #### Client
 
