--- a/docs/docs/gamium/get-started/quick-start.mdx
+++ b/docs/docs/gamium/get-started/quick-start.mdx
@@ -4,6 +4,7 @@ title: Quick Start
 ---
 
 import unity_dogurpgsample_editor from '@site/static/img/gamium/unity_dogurpgsample_editor.png';
+import unity_open_sample_login_scene from '@site/static/img/gamium/unity_open_sample_login_scene.png';
 
 This page will be based on Unity and TypeScript.
 
@@ -22,12 +23,11 @@ with Unity Editor.
 
 ### Play DoguRpgSample
 
-- Clone the [
-  gamium-unity-samples](https://github.com/dogu-team/gamium-unity-samples) git repository.
-- Open the
-  `gamium-unity-samples/DoguRpgSample` directory with Unity Editor.
-- Open Assets/Scenes/Login.unity
-- Press the play button to confirm that the project is running normally.
+1. Clone the [gamium-unity-samples](https://github.com/dogu-team/gamium-unity-samples) git repository.
+2. Open the `gamium-unity-samples/DoguRpgSample` directory with Unity Editor.
+3. Open **Assets/Scenes/Login.unity** as shown in the screenshot below.
+   <img src={unity_open_sample_login_scene} style={{ width: 600 }} />
+4. Press the play button to confirm that the project is running normally.
 
 Well done if the game is playing as below.
 
@@ -37,9 +37,9 @@ The engine is now running without problems. Next, let's connect the client to th
 
 ### Connect to the engine
 
-- Open the `gamium-unity-samples/client/typescript` directory with Visual Studio Code.
-- Open the terminal and execute the following command.
-  - This command initializes the automation script project, connects to the running gamium engine, and runs the automation script.
+1. Open the `gamium-unity-samples/client/typescript` directory with Visual Studio Code.
+2. Open the terminal and execute the following command.
+   - This command initializes the automation script project, connects to the running gamium engine, and runs the automation script.
 
 ```bash
 yarn install
