📝 update development overview

--- a/docs/docs/gamium/contributing/development-guides/client-development/overview.mdx
+++ b/docs/docs/gamium/contributing/development-guides/client-development/overview.mdx
@@ -10,7 +10,8 @@ title: Overview
 The following table shows the supported language versions.  
 If you want to use a language that is not listed below, please [**contact us**](https://dogutech.io/en/contact-us).
 
-| Language   | Version                 |
-| ---------- | ----------------------- |
-| TypeScript | 4.7.4                   |
-| Python     | 🚧 **work in progress** |
+| Language   | Version     |
+| ---------- | ----------- |
+| TypeScript | 4.7.4       |
+| Python     | Coming soon |
+| C#         | Coming soon |
