--- a/docs/docs/gamium/contributing/development-guides/engine-development/overview.mdx
+++ b/docs/docs/gamium/contributing/development-guides/engine-development/overview.mdx
@@ -14,4 +14,4 @@ If you want to use a engine or language that is not listed below, please [contac
 | ------------------ | ----------------------- |
 | Unity Engine       | 2020.3.0f1 or later     |
 | Unreal Engine      | 🚧 **work in progress** |
-| C++ Standalone     | 🚧 **work in progress** |
+| Godot Engine       | 🚧 **work in progress** |
