--- a/docs/docs/gamium/contributing/development-guides/engine-development/overview.mdx
+++ b/docs/docs/gamium/contributing/development-guides/engine-development/overview.mdx
@@ -10,8 +10,8 @@ title: Overview
 The following table shows the supported engine and language versions for the latest version of the SDK.  
 If you want to use a engine or language that is not listed below, please [contact us](https://dogutech.io/en/contact-us).
 
-| Engine or Language | Version                 |
-| ------------------ | ----------------------- |
-| Unity Engine       | 2020.3.0f1 or later     |
-| Unreal Engine      | 🚧 **work in progress** |
-| Godot Engine       | 🚧 **work in progress** |
+| Engine or Language | Version             |
+| ------------------ | ------------------- |
+| Unity Engine       | 2020.3.0f1 or later |
+| Unreal Engine      | Coming soon         |
+| Godot Engine       | Coming soon         |
