📝 update typescript client document

--- a/docs/docs/gamium/contributing/development-guides/client-development/typescript.mdx
+++ b/docs/docs/gamium/contributing/development-guides/client-development/typescript.mdx
@@ -5,4 +5,4 @@ title: TypeScript
 
 # Gamium Client for TypeScript
 
-🚧 **work in progress**
+Gamium Client for TypeScript is located in the `client/typescript/gamium` folder from the source root.
