--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -49,7 +49,7 @@ git checkout -b my-branch -t upstream/main
 
 ### Step 4: Code
 
-Most pull requests opened against the dogu-team/gamium repository include changes to either the protocol in the protocol/ folder, the client in the client/ folder, the server in the server/ folder, the documentation in docs/ folder.
+Most pull requests opened against the dogu-team/gamium repository include changes to either the protocol in the protocol/ folder, the client in the client/ folder, the engine in the engine/ folder, the documentation in docs/ folder.
 
 Please be sure to run `yarn run newbie` from the root of the project to run the husky pre-commit hook that will run the linter and prettier on your code.
 
