docs: change pr commit example

--- a/docs/docs/gamium/contributing/pull-requests.mdx
+++ b/docs/docs/gamium/contributing/pull-requests.mdx
@@ -74,9 +74,9 @@ Before a pull request can be merged, it **must** have a pull request title with 
 
 Examples of commit messages with semantic prefixes:
 
-- `fix: don't overwrite prevent_default if default wasn't prevented`
-- `feat: add app.isPackaged() method`
-- `docs: app.isDefaultProtocolClient is now available on Linux`
+- `fix: NullReferenceException when using ui.click() on a non existing element`
+- `feat: add ui.click() method`
+- `docs: gamium.ui() is now available`
 
 Common prefixes:
 
