--- a/docs/docs/api/client/typescript/classes/rpc-by.mdx
+++ b/docs/docs/api/client/typescript/classes/rpc-by.mdx
@@ -6,7 +6,7 @@ toc_max_heading_level: 4
 
 # RpcBy <s generated />
 
-Class used by [Remote Procedure Call](docs/client/rpc) when calling remote functions.
+Class used by [Remote Procedure Call](/docs/client/rpc) when calling remote functions.
 
 <hr class="solid" />  <s generated />
 
