--- a/docs/docs/docs/engine/unity/query-objects.mdx
+++ b/docs/docs/docs/engine/unity/query-objects.mdx
@@ -3,7 +3,7 @@ sidebar_position: 2
 title: Using GamiumEditor
 ---
 
-This article describes how to understand the [`ObjectPath`](docs/client/object-path).
+This article describes how to understand the [`ObjectPath`](/docs/client/object-path).
 This allows you to write scripts in the `Gamium Client`.
 
 :::info
