--- a/docs/docs/api/client/typescript/classes/by.mdx
+++ b/docs/docs/api/client/typescript/classes/by.mdx
@@ -6,7 +6,7 @@ toc_max_heading_level: 4
 
 # By <s generated />
 
-Class used by [Identifying GamiumObject](docs/client/object-path).
+Class used by [Identifying GamiumObject](/docs/client/object-path).
 
 <hr class="solid" />  <s generated />
 
