--- a/docs/docs/docs/client/rpc.mdx
+++ b/docs/docs/docs/client/rpc.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 The `Gamium Client`communicates with the`Gamium Engine` to remotely invoke the functions contained in the game.
 Before performing this action, check the supporting function through the guide first.
 
-> [Unity Rpc Calls](docs/engine/unity/rpc)
+> [Unity Rpc Calls](/docs/engine/unity/rpc)
 
 <br />
 
