docs: add description about preserve

--- a/docs/docs/docs/engine/unity/rpc.mdx
+++ b/docs/docs/docs/engine/unity/rpc.mdx
@@ -32,3 +32,4 @@ await game.executeRpc(
 
 - Only static functions can be called
 - Only types such as int, float, and string can be passed as factors and used as return values
+- Don't forget to add the [Preserve Attribute](https://docs.unity3d.com/ScriptReference/Scripting.PreserveAttribute.html) if the function is not being called from anywhere.
