docs: fix broken links, only use relative path, because there is some case that docusaurus can't catch when using absolute path

--- a/docs/docs/api/client/typescript/classes/action-chain.mdx
+++ b/docs/docs/api/client/typescript/classes/action-chain.mdx
@@ -6,7 +6,7 @@ toc_max_heading_level: 4
 
 # ActionChain <s generated />
 
-This class is used when you want to run multiple actions in a row in [`Game Controling`](/docs/client/game-control).
+This class is used when you want to run multiple actions in a row in [`Game Controling`](../../../../docs/client/game-control).
 
 <hr class="solid" />  <s generated />
 
@@ -150,7 +150,7 @@ await gamium
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Request actions registered in the AccrtionChain to 'Gamium Engine'.
+Request actions registered in the AccrtionChain to `Gamium Engine`.
 
 ##### Returns <s generated />
 
