--- a/docs/docs/api/client/typescript/classes/ui.mdx
+++ b/docs/docs/api/client/typescript/classes/ui.mdx
@@ -8,7 +8,7 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
-[UI Controling](/docs/client/ui) has a description. Class for easy UI manipulation.
+[UI Controling](../../../../docs/client/ui) has a description. Class for easy UI manipulation.
 
 ## Methods <s generated />
 
@@ -55,8 +55,8 @@ await ui.drag(By.path('Object path'), { x: 0, y: 0 });
 - to [`Locator`]( ../types/locator) | [`Vector2`]( ../types/vector2) <s generated />
 
   - Location to go to drag.
-    - If you are using [`Locator`] (../types/locator), go to that location.
-    - If you use [`Vector2`] (../types/vector2), move from the current location to that location. The screen coordinates.
+    - If you are using [`Locator`](../types/locator), go to that location.
+    - If you use [`Vector2`](../types/vector2), move from the current location to that location. The screen coordinates.
 
 - options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`]( ../types/find-object-options) & [`ActionsDragOptions`]( ../types/actions-drag-options)> <s generated />
 
@@ -70,7 +70,7 @@ await ui.drag(By.path('Object path'), { x: 0, y: 0 });
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Wait for the specified object to be found through [`Locator`](../types/locator). If an object is found, it is considered to be [`UIElement`] (ui-element) and returns the object
+Wait for the specified object to be found through [`Locator`](../types/locator). If an object is found, it is considered to be [`UIElement`](ui-element) and returns the object
 
 ##### Usage
 
