--- a/docs/docs/api/client/typescript/types/actions-scroll-options.mdx
+++ b/docs/docs/api/client/typescript/types/actions-scroll-options.mdx
@@ -9,7 +9,7 @@ toc_max_heading_level: 4
 
 #### durationMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- Set the milliseconds to request 'scroll' and wait for completion. The default is 300 ms.
+- Set the milliseconds to request `scroll` and wait for completion. The default is 300 ms.
 
 <hr class="solid" />  <s generated />
 
