--- a/docs/docs/api/client/typescript/types/send-key-options.mdx
+++ b/docs/docs/api/client/typescript/types/send-key-options.mdx
@@ -9,7 +9,7 @@ toc_max_heading_level: 4
 
 #### duratiomMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- When entering the key, specify 'milisseconds' between down and up. The default is 100.
+- When entering the key, specify `milisseconds` between down and up. The default is 100.
 
 <hr class="solid" />  <s generated />
 
