--- a/docs/docs/docs/client/ui.mdx
+++ b/docs/docs/docs/client/ui.mdx
@@ -7,15 +7,15 @@ toc_max_heading_level: 4
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-You can obtain an object called [`UI`](api/client/typescript/classes/ui) through the [`Game Driver`](api/client/typescript/classes/gamium-client).
-[`UI`](api/client/typescript/classes/ui) provides an interface for easy UI manipulation.
+You can obtain an object called [`UI`](../../api/client/typescript/classes/ui) through the [`Game Driver`](../../api/client/typescript/classes/gamium-client).
+[`UI`](../../api/client/typescript/classes/ui) provides an interface for easy UI manipulation.
 
 You can use it as below.
 
 ##### Usage
 
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 const ui = gamium.ui();
@@ -27,11 +27,11 @@ await ui.click(By.path('Object path'));
 
 ### Auto wait
 
-If you are using the class [`UI`](api/client/typescript/classes/ui), automatically do the [`wait`](api/client/typescript/classes/ui-element) until you find it.
+If you are using the class [`UI`](../../api/client/typescript/classes/ui), automatically do the [`wait`](../../api/client/typescript/classes/ui-element) until you find it.
 The above Usage works the same as below.
 
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 const button = await ui.wait(By.path('Object path'));
