--- a/docs/docs/docs/engine/unity/project-configuration.mdx
+++ b/docs/docs/docs/engine/unity/project-configuration.mdx
@@ -62,7 +62,7 @@ public class GamiumServerStarter
 
 ## 4. Check the log
 
-If the following log is output from the 'Unity Editor', the 'Gamium Engine' has been executed normally.
+If the following log is output from the `Unity Editor`, the `Gamium Engine` has been executed normally.
 
 <img src={unity_gamium_update_log} style={{ width: 500 }} />
 
