--- a/docs/docs/docs/get-started/quick-start.mdx
+++ b/docs/docs/docs/get-started/quick-start.mdx
@@ -53,4 +53,4 @@ If the test proceeds as shown in the screen below, you followed the guide well.
 ### Next thing to look around
 
 - Take a look at [dogurpgsample-test.ts](https://github.com/dogu-team/gamium-unity-samples/blob/main/client/typescript/test/dogurpgsample-test.ts). See how the script clicks the button. Also, look at how to buy items.
-- You can learn what functions and how to control them with client scripts from [Client document](/docs/client/write-testscript) and [API document](/api/api-reference).
+- You can learn what functions and how to control them with client scripts from [Client document](../client/write-testscript) and [API document](/api/api-reference).
