--- a/docs/docs/api/client/typescript/classes/gamium-client.mdx
+++ b/docs/docs/api/client/typescript/classes/gamium-client.mdx
@@ -28,7 +28,7 @@ const gamium = gamiumKit.gamium;
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Create an [`ActionChain`](action-chain). You can check how to use it in ["Control Game"](/docs/client/game-control).
+Create an [`ActionChain`](action-chain). You can check how to use it in ["Control Game"](../../../../docs/client/game-control).
 
 ##### Usage
 
@@ -46,7 +46,7 @@ await gamium.actions().click({ x: 0, y: 0 }).move({ x: 0, y: 0 }).perform();
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-You can call a specific function within the game. You can check the usage in [Remote Procedure Call](/docs/client/rpc).
+You can call a specific function within the game. You can check the usage in [Remote Procedure Call](../../../../docs/client/rpc).
 
 ##### Usage
 
@@ -105,7 +105,7 @@ Locate the object through [`Locator`](../types/locator). Returns all objects tha
 const products = await gamium.finds(By.path('Object path'));
 ```
 
-A [GamiumError] (Gamium-error) of the code [ObjectNotFound] (../enums/error-code#objectnotfound-) will occur if the specified object is not found.
+A [GamiumError](Gamium-error) of the code [ObjectNotFound](../enums/error-code#objectnotfound-) will occur if the specified object is not found.
 
 ##### Arguments <s generated />
 
@@ -178,7 +178,7 @@ const screen = await gamium.screen();
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control Game`](/docs/client/game-control).
+Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control Game`](../../../../docs/client/game-control).
 
 ##### Usage
 
@@ -202,7 +202,7 @@ await gamium.sendKey(KeyBy.unityKeycode('E'));
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Enter the key corresponding to the [`KeyBy`](key-by) array at the same time. You can check how to use it in [`Control Game`](/docs/client/game-control).
+Enter the key corresponding to the [`KeyBy`](key-by) array at the same time. You can check how to use it in [`Control Game`](../../../../docs/client/game-control).
 
 ##### Usage
 
