--- a/docs/docs/api/client/typescript/types/actions-click-options.mdx
+++ b/docs/docs/api/client/typescript/types/actions-click-options.mdx
@@ -9,7 +9,7 @@ toc_max_heading_level: 4
 
 #### durationMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- When 'click', specify 'milisseconds' between down and up. The default is 60.
+- When `click`, specify `milisseconds` between down and up. The default is 60.
 
 <hr class="solid" />  <s generated />
 
