--- a/docs/docs/api/client/typescript/types/find-object-options.mdx
+++ b/docs/docs/api/client/typescript/types/find-object-options.mdx
@@ -9,7 +9,7 @@ toc_max_heading_level: 4
 
 #### delayMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- Set the milliseconds to wait after completion of 'findObject'. The default is 60 ms.
+- Set the milliseconds to wait after completion of `findObject`. The default is 60 ms.
 
 <hr class="solid" />  <s generated />
 
