--- a/docs/docs/docs/client/game-control.mdx
+++ b/docs/docs/docs/client/game-control.mdx
@@ -10,13 +10,12 @@ import TabItem from '@theme/TabItem';
 ## Key input
 
 User keystrokes can be simulated through `Gamium Client`.
-[KeyBy](api/client/typescript/classes/key-by) allows you to specify the key input method.
+[KeyBy](../../api/client/typescript/classes/key-by) allows you to specify the key input method.
 
 You can use it as below.
 
-
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 await gamium.sendKey(KeyBy.unityKeycode('Space'));
@@ -28,16 +27,16 @@ await gamium.sendKey(KeyBy.unityKeyboard('Space'));
 
 ## ActionChain
 
-When manipulating the game through the `Gamium Client`, if you want to perform multiple actions continuously, you can use the `Action Chain` (api/client/typescript/classes/api/action-chain) to perform the action at the most accurate time.
+When manipulating the game through the `Gamium Client`, if you want to perform multiple actions continuously, you can use the [`Action Chain`](../../api/client/typescript/classes/action-chain) to perform the action at the most accurate time.
 
-You can add multiple actions to [`ActionChain`](api/client/typescript/classes/action-chain). When you call the performance() of [`ActionChain`](api/client/typescript/classes/action-chain), the added actions are performed sequentially.
+You can add multiple actions to [`ActionChain`](../../api/client/typescript/classes/action-chain). When you call the performance() of [`ActionChain`](../../api/client/typescript/classes/action-chain), the added actions are performed sequentially.
 
 You can combine several actions as shown below.
 
 #### Usage
 
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 await gamium
