--- a/docs/docs/docs/client/rpc.mdx
+++ b/docs/docs/docs/client/rpc.mdx
@@ -10,11 +10,11 @@ import TabItem from '@theme/TabItem';
 The `Gamium Client`communicates with the`Gamium Engine` to remotely invoke the functions contained in the game.
 Before performing this action, check the supporting function through the guide first.
 
-> [Unity Rpc Calls](/docs/engine/unity/rpc)
+> [Unity Rpc Calls](../engine/unity/rpc)
 
 <br />
 
-You can use [RpcBy](api/client/typescript/classes/rpc-by) by specifying the desired calling method.
+You can use [RpcBy](../../api/client/typescript/classes/rpc-by) by specifying the desired calling method.
 
 You can use it as below.
 
